--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Battles in History</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="src/reset.css">
+    <link rel="stylesheet" href="src/index.css">
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
@@ -41,6 +41,6 @@
       <h3>Data sourced from wikipedia</h3>
     </div> -->
   </body>
-  <script src="index.js"></script>
-  <script src="getBattleData.js"></script>
+  <script src="src/index.js"></script>
+  <script src="src/getBattleData.js"></script>
 </html>
