--- a/index.html
+++ b/index.html
@@ -1,46 +1,13 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
-    <title>Battles in History</title>
-    <link rel="stylesheet" href="src/reset.css">
-    <link rel="stylesheet" href="src/index.css">
-
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-    crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-    crossorigin=""></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>react-leaflet</title>
   </head>
   <body>
-    <header class="header">
-      <h1>Battles In History</h1>
-      <input type="button" class="headerBtn" value="Battles In France" id="France"></h1>
-      <input type="button" class="headerBtn" value="Battles In Germany" id="Germany"></h1>
-      <input type="button" class="headerBtn" value="Battles In England" id="England"></h1>
-      <input type="button" class="headerBtn" value="Battles In Spain" id="Spain"></h1>
-      <input type="button" class="headerBtn" value="Battles In Italy" id="Italy"></h1>
-      <input type="button" class="otherHeaderBtn" value="Countries List" id="countryListBtn"></h1>
-      <!-- <input type="button" class="otherHeaderBtn" value="Historical Battles Near Me"></h1> -->
-      <!-- <input type="search" name="" id="searchBox">
-      <input type="button" value="Search"> -->
-    </header>
-    <div class="container">
-      
-      <div id="map"></div>
-      <div id="infoPage">
-        <div id="infoHeader"><h1>test</h1></div>
-        <h1 id="info">Loading...</h1>
-      </div>
-    </div>
-    <!-- <div class="footer">
-      <input type="button" value="Login">
-      <input type="button" value="Register">
-      <h3>Data sourced from wikipedia</h3>
-    </div> -->
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
-  <script src="src/index.js"></script>
-  <script src="src/getBattleData.js"></script>
 </html>
